add main page chart

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -27,10 +27,13 @@
 {% endblock %}
 <!--导航结束-->
 <div class="spacer"></div>
+
 <div class="container">
     <div class="row">
         <!--首页左侧-开始-->
         {% block leftContent %}
+        {% block centernote %}
+        {% endblock %}
         <div class="col-md-8 col-sm-6">
             <div class="panel panel-default">
                 <div class="panel-body">
