create dataTable for weather and house data

--- a/webcrawler/templates/webcrawler/index.html
+++ b/webcrawler/templates/webcrawler/index.html
@@ -22,7 +22,9 @@
             进行web端的大部分功能操作，比如打开网页，身份验证，重定向，表单提交，验证码处理，Cookie处理等操作。
         </p>
         <p>
-        参考urllib2:<a href="https://docs.python.org/2/library/urllib2.html">https://docs.python.org/2/library/urllib2.html</a>
+        参考
+        urllib2:<a href="https://docs.python.org/2/library/urllib2.html">https://docs.python.org/2/library/urllib2.html</a>
+        HTMLParser:<a href="https://docs.python.org/2/library/htmlparser.html">https://docs.python.org/2/library/htmlparser.html</a>
         </p>
     </div>
 </div> 
