--- a/webcrawler/templates/webcrawler/index.html
+++ b/webcrawler/templates/webcrawler/index.html
@@ -25,6 +25,7 @@
         参考
         urllib2:<a href="https://docs.python.org/2/library/urllib2.html">https://docs.python.org/2/library/urllib2.html</a>
         HTMLParser:<a href="https://docs.python.org/2/library/htmlparser.html">https://docs.python.org/2/library/htmlparser.html</a>
+        lxml:<a href="http://lxml.de/">http://lxml.de/</a> 
         </p>
     </div>
 </div> 
