--- a/webcrawler/templates/webcrawler/weather/index.html
+++ b/webcrawler/templates/webcrawler/weather/index.html
@@ -23,7 +23,9 @@
     <div class="panel panel-primary">
         <div class="panel-heading">天气检索</div>
         <div class="panel-body">
-            <form class="form-inline" role="form">
+            <div class="panel panel-primary">
+              <div class="panel-body">
+                  <form class="form-inline" role="form">
               <div class="form-group">
                  <div class="input-group">
                      <div class="input-group-addon">城市:</div>
@@ -45,9 +47,13 @@
              </div>
              <button type="button" id="searchBtn" class="btn btn-primary">筛选</button>
             </form>
+              </div>
+            </div>
             
-            <table class="table" id="weather_table">
-				<thead>
+            <div class="panel panel-primary">
+              <div class="panel-body">
+                  <table class="table" id="weather_table">
+				  <thead>
 					<tr>
 						<th>城市</th>
                         <th>日期</th>
@@ -59,10 +65,13 @@
                         <th>风向</th>
                         <th>风速</th>
 					</tr>
-				</thead>
-				<tbody>
-				</tbody>
-			</table>
+				 </thead>
+				  <tbody>
+				  </tbody>
+			     </table>
+              </div>
+            </div>
+            
             
         </div>
     </div>
