--- a/machinelearing/templates/machinelearing/regression/regreleft.html
+++ b/machinelearing/templates/machinelearing/regression/regreleft.html
@@ -1,4 +1,4 @@
  <a href="{% url 'ml:regreindex' %}" class="list-group-item {% ifequal submenu 'index' %}active{% endifequal %}">概览</a>
- <a href="{% url 'ml:singlevar' %}" class="list-group-item {% ifequal submenu 'singlevar' %}active{% endifequal %}">单变量</a>
- <a href="{% url 'ml:multivar' %}" class="list-group-item {% ifequal submenu 'multivar' %}active{% endifequal %}">多变量</a>
- <a href="{% url 'ml:polynomial' %}" class="list-group-item {% ifequal submenu 'polynomial' %}active{% endifequal %}">多项式</a>
+ <a href="{% url 'ml:singlevar' %}" class="list-group-item {% ifequal submenu 'singlevar' %}active{% endifequal %}">房价线性回归</a>
+ <!--<a href="{% url 'ml:multivar' %}" class="list-group-item {% ifequal submenu 'multivar' %}active{% endifequal %}">多变量</a>
+ <a href="{% url 'ml:polynomial' %}" class="list-group-item {% ifequal submenu 'polynomial' %}active{% endifequal %}">多项式</a>-->
