update house price linear regression

--- a/machinelearing/templates/machinelearing/regression/singlevar.html
+++ b/machinelearing/templates/machinelearing/regression/singlevar.html
@@ -55,7 +55,10 @@
                  <div class="input-group">
                      <div class="input-group-addon">卧室:</div>
                      <select class="form-control" id="roomselect">
+                         <option value="1">1居室</option>
+                         <option value="2">2居室</option>
                          <option value="3">3居室</option>
+                         <option value="4">4居室</option>
                       </select>
                  </div>
               </div>
@@ -63,7 +66,16 @@
                  <div class="input-group">
                      <div class="input-group-addon">朝向:</div>
                      <select class="form-control" id="orienselect">
+                         <option value="东">东</option>
+                         <option value="南">南</option>
+                         <option value="西">西</option>
+                         <option value="北">北</option>
                          <option value="南北">南北</option>
+                         <option value="东南">东南</option>
+                         <option value="西南">西南</option>
+                         <option value="东北">东北</option>
+                         <option value="西北">西北</option>
+                         <option value="东西">东西</option>
                       </select>
                  </div>
               </div>
